hphp/hack/test/typecheck/coeffects/poly_var_reassign/inout.php.exp
File "inout.php", line 6, characters 11-12:
Invalid assignment to an `inout` parameter (Typing[4337])
  File "inout.php", line 5, characters 27-28:
  Expected exactly the type `vec<int>` (`inout` parameter)
  File "inout.php", line 3, characters 18-25:
  But got the nonexact type `vec<int>`
File "inout.php", line 6, characters 11-12:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
