hphp/hack/test/typecheck/coeffects/poly_var_reassign/inout.php
<?hh

function i(inout vec<int> $v)[]: void {}

function f(inout vec<int> $v)[$v::C]: void {
  i(inout $v);
}
